--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage??useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 logging.level.co.codingnomads.bot.arbitrage=DEBUG
