--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC
+# 数据库配置
+spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
-logging.level.co.codingnomads.bot.arbitrage=DEBUG
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis配置
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=co.codingnomads.bot.arbitrage.model
+
+# 日志配置
+logging.level.co.codingnomads.bot.arbitrage=INFO
+logging.level.org.springframework=WARN
