--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,6 +18,9 @@ log4j.appender.FILE.Threshold=debug
 # Set the append to false, overwrite
 log4j.appender.FILE.Append=false
 
+# Set encoding to UTF-8
+log4j.appender.FILE.encoding=UTF-8
+
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern=%m%n
@@ -27,5 +30,6 @@ log4j.logger.com.springrest.mappers.RefugeeMapper=TRACE
 
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.encoding=UTF-8
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
