--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,35 +1,83 @@
-## change if deployed anywhere than locally
+# ==================== 套利机器人日志配置 ====================
+# 配置说明：
+# 1. 同时输出到控制台和文件，便于调试
+# 2. 按日期滚动日志文件
+# 3. 不同级别的日志分别存储
+# 4. 使用UTF-8编码支持中文
 
-# Define the root logger with appender file
-log4j.rootLogger = WARN, FILE, ERROR, stdout
+# 根日志配置 - 同时输出到控制台和文件
+log4j.rootLogger = INFO, CONSOLE, FILE, ERROR_FILE, ARBITRAGE_FILE
 
-# Define the file appender
-log4j.appender.FILE=org.apache.log4j.FileAppender
+# ==================== 控制台输出配置 ====================
+# 控制台输出 - 用于调试和监控
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.encoding=UTF-8
+log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p [%c{1}] - %m%n
 
-# Set the name of the file
-log4j.appender.FILE.File=log/log.out
-
-# Set the immediate flush to true (default)
-log4j.appender.FILE.ImmediateFlush=true
-
-# Set the threshold to debug mode
-log4j.appender.FILE.Threshold=debug
-
-# Set the append to false, overwrite
-log4j.appender.FILE.Append=false
-
-# Set encoding to UTF-8
+# ==================== 通用日志文件配置 ====================
+# 主日志文件 - 记录所有INFO及以上级别的日志
+log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.FILE.File=log/arbitrage_bot.log
 log4j.appender.FILE.encoding=UTF-8
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.Append=true
+log4j.appender.FILE.Threshold=INFO
+log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
 
-# Define the layout for file appender
+# 日志格式配置
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%m%n
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p [%c{1}:%L] - %m%n
 
-# MyBatis logging configuration...
-log4j.logger.com.springrest.mappers.RefugeeMapper=TRACE
+# ==================== 错误日志文件配置 ====================
+# 错误日志文件 - 只记录ERROR和FATAL级别的日志
+log4j.appender.ERROR_FILE=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ERROR_FILE.File=log/arbitrage_bot_error.log
+log4j.appender.ERROR_FILE.encoding=UTF-8
+log4j.appender.ERROR_FILE.ImmediateFlush=true
+log4j.appender.ERROR_FILE.Append=true
+log4j.appender.ERROR_FILE.Threshold=ERROR
+log4j.appender.ERROR_FILE.DatePattern='.'yyyy-MM-dd
 
-# Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.encoding=UTF-8
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+# 错误日志格式配置
+log4j.appender.ERROR_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.ERROR_FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p [%c{1}:%L] - %m%n
+
+# ==================== 套利机会专用日志文件 ====================
+# 套利机会日志文件 - 记录套利机会相关信息
+log4j.appender.ARBITRAGE_FILE=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ARBITRAGE_FILE.File=log/arbitrage_opportunities.log
+log4j.appender.ARBITRAGE_FILE.encoding=UTF-8
+log4j.appender.ARBITRAGE_FILE.ImmediateFlush=true
+log4j.appender.ARBITRAGE_FILE.Append=true
+log4j.appender.ARBITRAGE_FILE.Threshold=INFO
+log4j.appender.ARBITRAGE_FILE.DatePattern='.'yyyy-MM-dd
+
+# 套利机会日志格式配置
+log4j.appender.ARBITRAGE_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.ARBITRAGE_FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p [%c{1}] - %m%n
+
+# ==================== 特定包的日志级别配置 ====================
+# 套利服务日志级别
+log4j.logger.co.codingnomads.bot.arbitrage.service.RealTimeArbitrageService=INFO, ARBITRAGE_FILE
+log4j.logger.co.codingnomads.bot.arbitrage.service.ArbitrageService=INFO, ARBITRAGE_FILE
+log4j.logger.co.codingnomads.bot.arbitrage.service.MarketDataService=INFO, FILE
+
+# WebSocket客户端日志级别
+log4j.logger.co.codingnomads.bot.arbitrage.exchange.ExchangeWebSocketClient=INFO, FILE
+
+# MyBatis日志配置
+log4j.logger.co.codingnomads.bot.arbitrage.mapper=DEBUG, FILE
+
+# Spring框架日志级别
+log4j.logger.org.springframework=WARN, FILE
+log4j.logger.org.mybatis=WARN, FILE
+
+# WebSocket库日志级别
+log4j.logger.org.java_websocket=WARN, FILE
+
+# 禁用控制台输出
+log4j.additivity.org.springframework=false
+log4j.additivity.org.mybatis=false
+log4j.additivity.org.java_websocket=false
