--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # 数据库配置
-spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+#spring.datasource.url=jdbc:mysql://192.168.85.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://192.168.189.130:3306/botarbitrage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
